--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-#viewer-cy, #editor-cy {
+#viewer-cy, #editor-cy, #simulation-cy {
     width: 100%;
     height: 600px;
     border: 1px solid #ccc;
