--- a/public/styles.css
+++ b/public/styles.css
@@ -69,6 +69,14 @@ body {
     background-color: #f0f0f0;
     border-right: 1px solid #ccc;
 }
+#simulation-controls {
+    width: 20%;
+    height: 100%;
+    float: left;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-right: 1px solid #ccc;
+}
 
 #simulation-controls div,
 #simulation-controls textarea,
@@ -124,18 +132,28 @@ body {
     background-color: #45a049;
 }
 
-#simulation-cy-container {
+#simulation-visualization-container {
+    display: flex;
     width: 75%;
     height: 100%;
     float: left;
-    padding: 10px;
+    padding: 0;
     background-color: #fff;
     border-left: 1px solid #ccc;
+    box-sizing: border-box; /* Add this */
 }
 
-#simulation-cy {
+#simulation-cy-container, #state-graph-cy-container {
+    flex: 1;
+    padding: 0;
+    background-color: #fff;
+    box-sizing: border-box; /* Add this */
+}
+
+#simulation-cy, #state-graph-cy {
     width: 100%;
     height: 600px;
     border: 1px solid #ccc;
     background-color: #fff;
+    box-sizing: border-box; /* Add this */
 }
